# cdk_mock

./: .gitignore  CMakeLists.txt  README.md  meson.build
cmake/: add_mocked_test.cmake  setup.cmake
docs/: c-minilib-mock-architecture.drawio
examples/: run.py
examples/cmake/: CMakeLists.txt  compile.sh  lib.c  lib.h  main.c  mock_lib.c  test_main.c
examples/gcc/: compile.sh  example_1.c  example_2.c  example_3.c  lib_3.h  mock_1.c  mock_2.c  mock_3.c
examples/meson/: compile.sh  lib.c  lib.h  main.c  main.h  meson.build  mock_lib.c  test_lib.c  test_main.c
examples/meson/subprojects/: c_minilib_mock.wrap  cdk_mock.wrap
examples/mockable_macro/: compile.sh  example_1.c  example_1.h  example_2.c  example_2.h  test_example_1.c  test_example_2.c
include/: c_minilib_mock.h  cdk_mock.h
meson/: add_mocked_test.meson  wrap_flags_gen.py
